Prevent buttons from extending the scroll size.
Without this change, the invisible text on these buttons causes the
tree's scrollview to have unnecessary space on the right, even though
we have overflow: hidden on the buttons.

--- a/css/tree.css
+++ b/css/tree.css
@@ -178,6 +178,7 @@
   overflow: hidden;
   vertical-align: top;
   color: transparent;
+  font-size: 0;
 }
 
 .expandCollapseButton {
